--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,6 +2,8 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      nodejs: 16
     commands:
       - npm install
   build:
@@ -12,3 +14,4 @@ artifacts:
   files:
     - '**/*'
   base-directory: build
+
